# wasm_template

./: .gitignore  CMakeLists.txt
demo/: CMakeLists.txt  add_numbers.cpp
src/: CMakeLists.txt  functions.cpp
